--- a/pom.xml
+++ b/pom.xml
@@ -8,16 +8,14 @@
   <artifactId>nettydemo</artifactId>
   <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
+
   <modules>
-    <module>server</module>
-    <module>client</module>
       <module>websocket_server</module>
       <module>udp_dmeo</module>
+      <module>tcp_dmeo</module>
   </modules>
 
-  <name>nettydemo</name>
-  <!-- FIXME change it to the project's website -->
-  <url>http://www.example.com</url>
+
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
